fixed spelling and syntax errors

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-    "name": "18-Social-Network-API",
+    "name": "18-social-network-api",
     "version": "1.0.0",
     "description": "",
-    "main": "server.js",
+    "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon server.js"
+        "start": "node index",
+        "seed": "node utils/seed"
     },
     "keywords": [],
     "author": "",
