--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "express": "^4.17.1",
         "mongoose": "^6.9.0"
